<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    android:background="@drawable/pattern_bg2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/toolbar" />

        <TextView
            android:id="@+id/pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="20sp"
            android:paddingLeft="20sp"
            android:text="package option"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"/>

        <LinearLayout
            android:id="@+id/ln1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pack"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="top"
                    android:text="trial"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <ImageButton
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:id="@+id/trial"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:background="@drawable/package1" />

                <TextView
                    android:id="@+id/lb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trial_feat"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="beginner"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <ImageButton
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:id="@+id/beginner"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:background="@drawable/package1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginner_feat"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ln2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln1"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="advanced"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <ImageButton
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:id="@+id/advanced"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:background="@drawable/package1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advance_feat"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="expert"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <ImageButton
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:id="@+id/expert"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:background="@drawable/package1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expert_feat"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

